RESOLVED FIXED 242525
Force Touch > ”open“ on QR code via context menu does not open or do anything
https://bugs.webkit.org/show_bug.cgi?id=242525
Summary Force Touch > ”open“ on QR code via context menu does not open or do anything
Richard Robinson
Reported 2022-07-08 10:37:44 PDT
When force pressing a QR code in Safari and tapping `Open`, nothing happens. This is because WebKit tries to simulate a click on the link, but since it is a QR code, nothing happens.
Attachments
Richard Robinson
Comment 1 2022-07-08 11:00:17 PDT
Richard Robinson
Comment 2 2022-07-08 11:05:39 PDT
EWS
Comment 3 2022-07-14 10:44:17 PDT
Committed 252460@main (7a4c2140ccbe): <https://commits.webkit.org/252460@main> Reviewed commits have been landed. Closing PR #2233 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.