Force Touch > "open" on QR code via context menu does not open or do anything https://bugs.webkit.org/show_bug.cgi?id=242525 rdar://89497391

Reviewed by Aditya Keerthi.

When attempting to open a link via the context menu, WebKit simulates a click
at the location of the link. However, in the case of QR codes, there is no
actual link, so this does nothing. This change addresses this by opening the
URL directly instead of simulating a click.

* Source/WebKit/Shared/ios/InteractionInformationAtPosition.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKActivatedElementInfo.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKActivatedElementInfo.mm:
(-[_WKActivatedElementInfo _initWithInteractionInformationAtPosition:userInfo:]):
(-[_WKActivatedElementInfo isUsingAlternateURLForImage]):
* Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant handleElementActionWithType:element:needsInteraction:]):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView continueContextMenuInteraction:]):

Canonical link: https://commits.webkit.org/252460@main